--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -203,19 +203,16 @@ spec:
             - name: kerberos-keytab-copy
               mountPath: /kerberos-keytab-copy
       {{- end }}
-      {{- if not .Values.namenodeHAEnabled }}
-      # Pin the pod to a node. You can label your node like below:
-      #   $ kubectl label nodes YOUR-NODE hdfs-namenode-selector=hdfs-namenode-0
-      # FIXME: Find a way to ping the two HA namenodes to two cluster nodes.
+      {{- if .Values.namenodePinningEnabled }}
+      # Pin namenode pods to a set of nodes. You can label your node like below:
+      #   $ kubectl label nodes YOUR-NODE hdfs-namenode-selector=hdfs-namenode
       nodeSelector:
-        hdfs-namenode-selector: hdfs-namenode-0
+        hdfs-namenode-selector: hdfs-namenode
       {{- end }}
       restartPolicy: Always
       volumes:
-        # FIXME: Use PVs in case of HA.
-        - name: hdfs-name
-          hostPath:
-            path: {{ .Values.nameNodeHostPath }}
+        - name: metadatadir
+          mountPath: /hadoop/dfs/name
         {{- if .Values.namenodeHAEnabled }}
         - name: nn-start
           emptyDir: {}
@@ -230,3 +227,11 @@ spec:
         - name: kerberos-keytab-copy
           emptyDir: {}
         {{- end }}
+  volumeClaimTemplates:
+  - metadata:
+      name: metadatadir
+    spec:
+      accessModes: [ "ReadWriteOnce" ]
+      resources:
+        requests:
+          storage: 10Gi
