--- a/charts/hdfs-namenode-k8s/values.yaml
+++ b/charts/hdfs-namenode-k8s/values.yaml
@@ -18,10 +18,8 @@
 # Whether or not namenode HA is enabled.
 namenodeHAEnabled: false
 
-# Path of the local disk directory on a cluster node that will contain the namenode
-# fsimage and edit logs. This will be mounted to the namenode as a k8s HostPath
-# volume.
-nameNodeHostPath: /hdfs-name
+# Whether or not pinning namenode pods to labeled nodes is enabled.
+namenodePinningEnabled: false
 
 # Custom hadoop config keys passed through env variables to hadoop uhopper images.
 # See https://hub.docker.com/r/uhopper/hadoop/ to get more details
