Adds a uber chart (#47)
* Add krb5-server chart

* krb5-server runs

* Support multiple test cases

* Add cases

* Support skip cleaning up

* Kerberos test sets up config and keytabs

* Fix bugs

* Fix typo

* Enable kerberos for journal nodes

* Fix a bug

* Fix a bug

* Specify journalnode princiapls in the namenode config

* Test client use kerberos

* Use nn0 pod for hdfs admin commands

* Run test cases back to back

* Describe pod when tests fail

* Debug travis

* debug travis

* debug travis

* debug travis

* debug travis

* debug travis

* debug travis

* debug travis

* debug travis

* debug travis

* debug travis

* debug travis

* debug travis

* Fix typo

* debug travis

* debug travis

* Do mount --make-share for travis

* Works end-to-end even in Travis

* Document the krb5-server chart

* Minor clean up

* Clean up

* Use -k option

* Add a chart for common configmap

* Remove vim file

* Switch charts to use the new configmap

* Fix a minor bug

* Fix a typo

* Fix a bug

* Disable service level RPC authorization

* Add group mapping for the hdfs user

* Remove redundant license notices

* CI clean up the hdfs-config chart

* Remove redundant zookeeper param in CI

* Test multiple datanode data dirs

* Test custom Hadoop config values in CI

* Update README.md's

* Cover non-HA in CI

* Add a uber-chart

* zookeeper and journalnode launch

* Clean up structure

* clean up

* journalnode works

* clean up

* Include namenode in uber-chart

* Fix bugs

* debugging namenode startup

* Work around zkfc bug

* Namenodes get ready after retrying a few times

* Include datanodes in uber-chart

* Restart datanode pod using livenessProbe when failing to register

* Fix a bug

* Working on CI now

* Basic CI passes

* Kerberos CI passes

* fix a typo

* fix a bug

* Add a helm repo

* Add subcharts CI case

* CI

--- a/charts/hdfs-client-k8s/templates/client-deployment.yaml
+++ b/charts/hdfs-client-k8s/templates/client-deployment.yaml
@@ -2,18 +2,22 @@ apiVersion: apps/v1
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: hdfs-client
+  name: {{ template "hdfs-k8s.client.fullname" . }}
   labels:
-    app: hdfs-client
+    app: {{ template "hdfs-k8s.client.name" . }}
+    chart: {{ template "hdfs-k8s.subchart" . }}
+    release: {{ .Release.Name }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: hdfs-client
+      app: {{ template "hdfs-k8s.client.name" . }}
+      release: {{ .Release.Name }}
   template:
     metadata:
       labels:
-        app: hdfs-client
+        app: {{ template "hdfs-k8s.client.name" . }}
+        release: {{ .Release.Name }}
     spec:
       containers:
         - name: hdfs-client
@@ -30,19 +34,19 @@ spec:
             - name: hdfs-config
               mountPath: /etc/hadoop-custom-conf
               readOnly: true
-            {{- if .Values.kerberosEnabled }}
+            {{- if .Values.global.kerberosEnabled }}
             - name: kerberos-config
               mountPath: /etc/krb5.conf
-              subPath: {{ .Values.kerberosConfigFileName }}
+              subPath: {{ .Values.global.kerberosConfigFileName }}
               readOnly: true
             {{- end }}
       restartPolicy: Always
       volumes:
         - name: hdfs-config
           configMap:
-            name: {{ .Values.hdfsConfigMap }}
-        {{- if .Values.kerberosEnabled }}
+            name: {{ template "hdfs-k8s.config.fullname" . }}
+        {{- if .Values.global.kerberosEnabled }}
         - name: kerberos-config
           configMap:
-            name: {{ .Values.kerberosConfigMap }}
+            name: {{ template "krb5-configmap" . }}
         {{- end }}
