--- a/charts/hdfs-journalnode-k8s/Chart.yaml
+++ b/charts/hdfs-journalnode-k8s/Chart.yaml
@@ -1,4 +1,4 @@
 apiVersion: v1
 name: hdfs-journalnode-k8s
-version: 0.2.0
-description: Hadoop Distributed File System (HDFS) hosted by Kubernetes.
+version: 0.1.0
+description: Journalnode quorum used by HDFS on Kubernetes.
